# belgi

./: .gitattributes  .gitignore  CANONICALS.md  CHANGELOG.md  LICENSE  README.md  TRADEMARK.md  WHITEPAPER.md  pyproject.toml  pytest.ini  requirements-dev.txt  terminology.md  trust-model.md
.github/: CODEOWNERS  copilot-instructions.md
belgi/: __init__.py  adopter_overlay.py  ci_result.py  ci_smoke_verify.py  cli.py  trust_anchor.py
chain/: __init__.py  compiler_c1_intent.py  compiler_c3_docs.py  gate_q_verify.py  gate_r_verify.py  gate_s_verify.py  seal_bundle.py
compilers/: COMPILER_C1.md  COMPILER_C3.md
docs/: exit_codes.md
gates/: GATE_Q.md  GATE_R.md  failure-taxonomy.md
policy/: consistency_sweep.json  consistency_sweep.summary.md
schemas/: DocsCompilationLogPayload.schema.json  EvidenceManifest.schema.json  HOTLApproval.schema.json  IntentSpec.schema.json  README.md  TestReportPayload.schema.json  TierPacks.schema.json  TrustAnchor.schema.json  Waiver.schema.json
scripts/: README.md  belgi_latest_run.ps1  belgi_latest_run.py  belgi_latest_run.sh  belgi_wip_commit_run_reset.ps1  dev_sync.cmd  dev_sync.ps1
tests/: test_belgi_tools_run_tests.py  test_builtin_protocol_pack.py  test_c3_engine_canonicals_integration.py  test_ci_result_parser.py  test_cli_usage_error_model.py  test_codeowners_checker.py  test_core_ssot_guards.py  test_docs_compiler_hash_contract.py  test_ergonomics_helpers.py  test_gate_contracts.py  test_github_vars_sanitize.py  test_import_graph_sanity.py  test_manifest_init.py  test_no_chain_base_cannon_imports.py  test_overlay_requirements.py  test_pack_lifecycle.py  test_packaging_smoke.py  test_policy_stub_cli.py  test_protocol_identity_ssot.py  test_protocol_pack_manifest.py  test_q6_waiver_limits.py  test_r2_r3_diff_capture_integration.py  test_r6_attestation_signing_integration.py  test_r7_r8_policy_scan_integration.py  test_repo_jail_and_cmdlog.py  test_run_belgi_smoke_script.py  test_run_manifest_cli.py  test_run_orchestrator_template_hydration.py  test_run_verify_cli.py  test_stage_cli_forwarders.py  test_sweep_semantics.py  test_template_claim_contracts.py  test_tier_contract_enforcement.py  test_tier_packs_schema.py  test_trust_anchor_contract.py  test_validate_belgi_ref_pin.py  test_waiver_cli.py  test_wheel_boundary.py  test_yaml_subset_parser.py
tiers/: tier-packs.json  tier-packs.md  tier-packs.template.md
(+231 files in other folders)
